Closed Bug 315453 Opened 20 years ago Closed 20 years ago

[FIX]SeaMonkey crash [@ nsCSSFrameConstructor::RestyleEvent::HandleEvent] when closing after using 'Reply' in MailNews

Categories

(Core :: Layout, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9alpha1

People

(Reporter: bugzille, Assigned: bzbarsky)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051107 SeaMonkey/1.5a Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051107 SeaMonkey/1.5a After you open the Composer to answer a posting(its not necessary to send the answer), SeaMonkey crash when you close SeaMonkey after that. Reproducible: Always Steps to Reproduce: 1.Open MailNews 2.Select a mail/posting 3.Klick on 'Reply' 4.Leave the composer after that(sending an answer is not necessary) 5.Close Seamonkey Actual Results: Crash after the SeaMonkey-Window allready is closed Expected Results: no crash Linux-builds are allso affected.
Version: unspecified → Trunk
Hmm. I can confirm this crash using: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20051107 SeaMonkey/1.5a Mnenhy/0.7.2.10015 {Build ID: 2005110710} Got an TB-Incident: TB11568018K but it was not processed at moment, so I cant add the Stack.
Confirming with build 2005-11-07-10 of SeaMonkey trunk on Windows XP.
Severity: normal → critical
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: crash
Likely is the fix in bug 314776: nsCSSFrameConstructor::RestyleEvent::HandleEvent [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/layout/base/nsCSSFrameConstructor.cpp, line 13302] 0x778b0c24 nsBidi::doWriteReverse [e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/layout/base/nsBidi.cpp, line 2211] 0xe9c03330
Yeah, this is a regression from bug 314776
Assignee: mail → nobody
Blocks: 314776
Component: MailNews: Main Mail Window → Layout: Misc Code
OS: Windows XP → All
Product: Mozilla Application Suite → Core
QA Contact: layout.misc-code
Hardware: PC → All
Attached patch Proposed patchSplinter Review
Composer is torn down after the frame tree in this case and tries to reconstruct style after messing with override sheets... We want to just ignore that on a destroyed presshell.
Attachment #202194 - Flags: superreview?(dbaron)
Attachment #202194 - Flags: review?(dbaron)
Assignee: nobody → bzbarsky
Priority: -- → P1
Summary: SeaMonkey crash when closing after using 'Reply' in MailNews → [FIX]SeaMonkey crash when closing after using 'Reply' in MailNews
Target Milestone: --- → mozilla1.9alpha
Comment on attachment 202194 [details] [diff] [review] Proposed patch Didn't I review moving mIsDestroying as part of another patch? Anyway, r+sr=dbaron.
Attachment #202194 - Flags: superreview?(dbaron)
Attachment #202194 - Flags: superreview+
Attachment #202194 - Flags: review?(dbaron)
Attachment #202194 - Flags: review+
I moved mDidInitialReflow in bug 314776...
Fixed.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Summary: [FIX]SeaMonkey crash when closing after using 'Reply' in MailNews → [FIX]SeaMonkey crash [@ nsCSSFrameConstructor::RestyleEvent::HandleEvent] when closing after using 'Reply' in MailNews
*** Bug 315560 has been marked as a duplicate of this bug. ***
Verified FIXED using SeaMonkey 1.5a Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051108 Mozilla/1.0
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsCSSFrameConstructor::RestyleEvent::HandleEvent]
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: