Don't try to restyle a destroyed frame tree.  Bug 315453, r+sr=dbaron